--- a/16-react-typescript-scratch/my-app/src/assets/styles/components/_callout.scss
+++ b/16-react-typescript-scratch/my-app/src/assets/styles/components/_callout.scss
@@ -7,9 +7,7 @@
     align-items: center;
     justify-content: center;
 
-    img {
-      max-width: 400px;
-    }
+    img {}
   }
 
   &--text {
@@ -28,7 +26,7 @@
 
         i {
           font-size: 2.5rem;
-          color: $secondary;
+          color: $primary;
         }
       }
     }
