--- a/16-react-typescript-scratch/my-app/src/assets/styles/index.scss
+++ b/16-react-typescript-scratch/my-app/src/assets/styles/index.scss
@@ -1,3 +1,5 @@
+@import "../../../node_modules//animate.css/animate.min.css";
+
 @import './custom';
 @import './utils/key-frames';
 @import './utils/media-queries';
