--- a/16-react-typescript-scratch/my-app/src/assets/styles/components/_who-we-are.scss
+++ b/16-react-typescript-scratch/my-app/src/assets/styles/components/_who-we-are.scss
@@ -100,6 +100,10 @@
       align-items: center;
       justify-content: center;
 
+      @include media-breakpoint-down(lg) {
+        display: none;
+      }
+
       .site-logo {
         width: 20%;
       }
